scss/_patterns_inline-images.scss
@import 'settings';

// Image grid to showcase group of images
@mixin vf-p-inline-images {
  .p-inline-images {
    @extend %clearfix;
    display: block;
    list-style: none; // if list is used as wrapper
    margin-left: 0;
    padding-left: 0;
    text-align: center;

    &__item {
      display: inline-block;
      margin: 1.875rem;
      max-height: 5.625rem;
      max-width: 5.625rem;
      overflow: hidden;
      text-align: center;
      vertical-align: middle;

      @media (min-width: $breakpoint-medium) {
        margin: 1.875rem;
        max-height: 11.25rem;
        max-width: 11.25rem;
      }

      * {
        max-height: $sp-xxx-large;
        max-width: 7rem;
        width: 100%;

        @media only screen and (min-width: $breakpoint-medium) {
          max-height: 5.5rem;
          max-width: 9rem;
        }
      }
    }

    @include deprecate('2.0.0', 'Use .p-inline-images__item instead') {
      &__img {
        display: inline-block;
        margin: $sp-x-large;
        max-width: 6rem;
        text-align: center;
        vertical-align: middle;
        width: 100%;

        @media (min-width: $breakpoint-medium) {
          margin: $sp-xxx-large;
          max-width: 11.25rem;
        }
      }
    }
  }
}

